src/test/deca/syntax/invalid/synt/missingVBar.deca
/* marche avec n'importe quel caractère à la place de | */

{
    x | y;
}
